# tomorrow-bot

./: .gitignore  BUGFIX_REPORT_2026-05-18.md  CMakeLists.txt  README.md  audit.md  claude.md  plan.md  run_prod.sh  run_production_test.sh
src/adversarial_defense/: CMakeLists.txt  adversarial_defense.cpp  adversarial_defense.hpp  adversarial_types.hpp
src/ai/: CMakeLists.txt  ai_advisory_engine.cpp  ai_advisory_engine.hpp  ai_advisory_types.hpp
src/alpha_decay/: CMakeLists.txt  alpha_decay_monitor.cpp  alpha_decay_monitor.hpp  alpha_decay_types.hpp
src/app/: CMakeLists.txt  app.md  app_bootstrap.cpp  app_bootstrap.hpp  claude.md  health_state.hpp  http_server.cpp  http_server.hpp  main.cpp  runtime_manifest.cpp  runtime_manifest.hpp
src/champion_challenger/: CMakeLists.txt  champion_challenger_engine.cpp  champion_challenger_engine.hpp  champion_challenger_types.hpp
src/clock/: CMakeLists.txt  claude.md  clock.hpp  clock.md  monotonic_clock.cpp  monotonic_clock.hpp  timestamp_utils.hpp  wall_clock.cpp  wall_clock.hpp
src/common/: CMakeLists.txt  claude.md  common.md  constants.hpp  enums.hpp  errors.hpp  exchange_rules.hpp  ids.hpp  numeric_utils.hpp  reason_codes.hpp  result.hpp  types.hpp
src/config/: CMakeLists.txt  claude.md  config_hash.cpp  config_hash.hpp  config_loader.cpp  config_loader.hpp  config_types.hpp  config_validator.cpp  config_validator.hpp
src/execution/: CMakeLists.txt  claude.md  execution.md  execution_config.hpp  execution_engine.cpp  execution_engine.hpp  execution_engine_new.cpp  execution_quality_monitor.cpp  execution_quality_monitor.hpp  execution_types.cpp  execution_types.hpp  execution_utils.hpp  order_fsm.cpp  order_fsm.hpp  order_submitter.hpp  order_types.cpp  order_types.hpp  twap_executor.cpp  twap_executor.hpp
src/features/: CMakeLists.txt  advanced_features.cpp  advanced_features.hpp  claude.md  feature_engine.cpp  feature_engine.hpp  feature_snapshot.hpp  features.md  microstructure_features.cpp  microstructure_features.hpp
src/governance/: CMakeLists.txt  governance_audit_layer.cpp  governance_audit_layer.hpp  governance_types.hpp
src/health/: CMakeLists.txt  health_service.cpp  health_service.hpp  readiness_state.hpp
src/indicators/: ADVANCED_INDICATORS.md  CMakeLists.txt  advanced_indicators.cpp  advanced_indicators.hpp  claude.md  indicator_engine.cpp  indicator_engine.hpp  indicator_types.hpp  indicators.md
src/logging/: CMakeLists.txt  claude.md  json_formatter.cpp  json_formatter.hpp  log_context.hpp  log_event.hpp  logger.cpp  logger.hpp  logging.md
src/metrics/: CMakeLists.txt  claude.md  counter.hpp  gauge.hpp  histogram.hpp  metric_tags.hpp  metrics_registry.cpp  metrics_registry.hpp
src/ml/: CMakeLists.txt  ML.md  bayesian_adapter.cpp  bayesian_adapter.hpp  calibration.cpp  calibration.hpp  claude.md  correlation_monitor.cpp  correlation_monitor.hpp  entropy_filter.cpp  entropy_filter.hpp  liquidation_cascade.cpp  liquidation_cascade.hpp  meta_label.cpp  meta_label.hpp  microstructure_fingerprint.cpp  microstructure_fingerprint.hpp  ml_signal_types.hpp  regime_ensemble.cpp  regime_ensemble.hpp  thompson_sampler.cpp  thompson_sampler.hpp
src/operator_control/: CMakeLists.txt  operator_control_plane.cpp  operator_control_plane.hpp  operator_types.hpp
src/persistence/: CMakeLists.txt  claude.md  event_journal.cpp  event_journal.hpp  memory_storage_adapter.cpp  memory_storage_adapter.hpp  persistence.md  persistence_layer.cpp  persistence_layer.hpp  persistence_types.hpp  postgres_storage_adapter.cpp  postgres_storage_adapter.hpp  snapshot_store.cpp  snapshot_store.hpp  storage_adapter.hpp  wal_writer.cpp  wal_writer.hpp
src/pipeline/: CMakeLists.txt  PERIODIC_TRAILING_SL.md  PRE_TRADE_GATES.md  PROTECTIVE_BRACKET_MANAGER.md  STAGNANT_POSITION_DETECTOR.md  claude.md  dual_leg_manager.cpp  dual_leg_manager.hpp  exit_orchestrator.cpp  exit_orchestrator.hpp  exit_types.hpp  funding_rate_tracker.hpp  hedge_pair_manager.cpp  hedge_pair_manager.hpp  htf_trend_state.hpp  market_reaction_engine.cpp  market_reaction_engine.hpp  order_watchdog.cpp  order_watchdog.hpp  pair_economics.cpp  pair_economics.hpp  pair_execution_coordinator.cpp  pair_execution_coordinator.hpp  pair_lifecycle_engine.cpp  pair_lifecycle_engine.hpp  periodic_trailing_sl.cpp  periodic_trailing_sl.hpp  pipeline.md  pipeline_latency_tracker.hpp  pipeline_stage_result.hpp  pipeline_tick_context.hpp  pre_trade_gates.cpp  pre_trade_gates.hpp  protective_bracket_manager.cpp  protective_bracket_manager.hpp  rest_worker_pool.cpp  rest_worker_pool.hpp  stagnant_position_detector.cpp  stagnant_position_detector.hpp  trading_history_stats.hpp  (+2 more)
src/platform/: CMakeLists.txt  platform_info.cpp  platform_info.hpp
src/reconciliation/: CMakeLists.txt  claude.md  reconciliation.md  reconciliation_engine.cpp  reconciliation_engine.hpp  reconciliation_types.hpp
src/recovery/: CMakeLists.txt  claude.md  recovery.md  recovery_service.cpp  recovery_service.hpp  recovery_types.hpp
src/replay/: CMakeLists.txt  backtest_engine.cpp  backtest_engine.hpp  backtest_types.hpp  fill_simulator.hpp  replay_engine.cpp  replay_engine.hpp  replay_types.hpp
src/resilience/: CMakeLists.txt  circuit_breaker.cpp  circuit_breaker.hpp  claude.md  idempotency_manager.cpp  idempotency_manager.hpp  operational_guard.cpp  operational_guard.hpp  resilience.md  resilience_types.hpp  retry_executor.cpp  retry_executor.hpp
src/risk/: CMakeLists.txt  claude.md  risk.md  risk_context.hpp  risk_engine.cpp  risk_engine.hpp  risk_types.cpp  risk_types.hpp
src/scanner/: CMakeLists.txt  bias_detector.cpp  bias_detector.hpp  claude.md  feature_calculator.cpp  feature_calculator.hpp  i_trap_detector.hpp  pair_filter.cpp  pair_filter.hpp  pair_ranker.cpp  pair_ranker.hpp  scanner.md  scanner_config.hpp  scanner_engine.cpp  scanner_engine.hpp  scanner_types.hpp  trap_detectors.cpp  trap_detectors.hpp
src/security/: CMakeLists.txt  claude.md  credential_types.hpp  production_guard.cpp  production_guard.hpp  redaction.cpp  redaction.hpp  secret_provider.cpp  (+1 more)
tests/: CMakeLists.txt
(+412 files in other folders)
